infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  annotations: 
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    - host: ticketing.dev
      http:
        paths: 
          - path: /api/users/?(.*)
            pathType: Prefix
            backend: 
              service: 
                name: auth-svc # This is the name of the service we want to send requests to
                port: 
                  number: 3000 # With its port
